GNOME Bugzilla – Bug 607215
Cannot compile with gtk 2.19.3
Last modified: 2010-01-18 20:06:19 UTC
Created attachment 151585 [details] Fix for gtk 2.19.3 deprecated functions Somme functions has been deprecated in gtk 2.19.3, causing gcompris fail to build. I've made a small patch to fix this. Unfortunately, the attached patch allow gcompris to build correctly with gtk>=2.18 but not lower. I'll try to provide a better one that permit to compile also with gtk<2.18. Hope that helps.
I've just realized that these issue is not related to gcompris ; but to the goocanvas sources embedded in the 9.0 release. Sorry for the noise.
Hum ; I did'nt pay attention the goocanvas version embedded was so old. I reopen the bug, so it can be fixed in gcompris directly.
Created attachment 151633 [details] [review] New patch version (compile with gtk<2.18) Ok, here is the new version for the patch. I've sucessfully compiled gcompris-9.0 with gtk in versions 2.16.6, 2.18.6 and 2.19.3.
Applied in commit a8dd1667b2e90537af3de31b4826add8065df879