Fixes to compile with GTK 2.19

This patch comes from Johan Cwiklinski
https://bugzilla.gnome.org/show_bug.cgi?id=607215