src/goocanvas/src/goocanvas.c
@@ -3314,7 +3314,11 @@ goo_canvas_grab_focus (GooCanvas     *canvas,
 
   g_return_if_fail (GOO_IS_CANVAS (canvas));
   g_return_if_fail (GOO_IS_CANVAS_ITEM (item));
+#if GTK_CHECK_VERSION(2, 18, 0)
+  g_return_if_fail (gtk_widget_get_can_focus (GTK_WIDGET (canvas)));
+#else
   g_return_if_fail (GTK_WIDGET_CAN_FOCUS (canvas));
+#endif
 
   if (canvas->focused_item) {
     event.type = GDK_FOCUS_CHANGE;
@@ -4145,7 +4149,11 @@ goo_canvas_focus (GtkWidget        *widget,
   canvas = GOO_CANVAS (widget);
 
   /* If keyboard navigation has been turned off for the canvas, return FALSE.*/
+#if GTK_CHECK_VERSION(2, 18, 0)
+  if (!gtk_widget_get_can_focus (GTK_WIDGET (canvas)))
+#else
   if (!GTK_WIDGET_CAN_FOCUS (canvas))
+#endif
     return FALSE;
 
   /* If a child widget has the focus, try moving the focus within that. */
